# dynamic-sound

./: .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  contact.rst  index.rst  modules.rst
docs/_static/: Images.drawio  UML_Diagram.drawio
examples/: Untitled1.ipynb  Untitled_drone_position.ipynb  Untitled_sine.ipynb  Untitled_sine_beamforming.ipynb  Untitled_sine_dynamic.ipynb  air_absorption.ipynb  air_absorption_coefficients.ipynb  airsim_simulation.ipynb  dynamic_sine_wave.ipynb  dynamic_white_noise.ipynb  pyroad.ipynb  simulation.ipynb  static_sine_wave.ipynb  test.ipynb
examples/airsim/: .gitignore  README.md  conda_env.sh  data_collector.py  data_converter.py
examples/airsim/settings/: default.json  default_BACKUP.json  temp.json
examples/res/path/: camera_path.csv
examples/resources/paths/: drone_path.csv
src/dynamic_sound/: __init__.py  _path.py  _simulation.py  _version.py  test.py
src/dynamic_sound/_core/: _environment.py  _microphone_array.py  _path.py  _simulation.py  _source.py  _time_emission.py
src/dynamic_sound/acoustics/: __init__.py  attenuations.py  doppler.py  utils.py
src/dynamic_sound/environment/: __init__.py  _air.py
src/dynamic_sound/microphones/: __init__.py  _hedraphone.py  _microphones.py
src/dynamic_sound/path/: _path.py
src/dynamic_sound/sources/: __init__.py  _audio_file.py  _sine_wave.py  _source.py  _white_noise.py
tests/: test_air_coefficients.py  test_simulation.py  test_version.py
tests/resources/paths/: camera_path.csv  drone_path.csv
(+2 files in other folders)
