[project]
name = "dynamic-sound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Barbisan", email = "luca.barbisan@polito.it" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "librosa>=0.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
