[project]
name = "dynamic-sound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Barbisan", email = "luca.barbisan@polito.it" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "numpy-quaternion>=2024.0.12",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "acoular>=25.4",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pyroadacoustics>=1.1.0",
    "pyroomacoustics>=0.8.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
